Se agrega el proceso para poder ejecutar las tareas pendientes, y las fallidas reprocesarla, ademas se configura un envio de correos por SMTP.

--- a/taskQueueGrupo3/Views/Shared/_Layout.cshtml
+++ b/taskQueueGrupo3/Views/Shared/_Layout.cshtml
@@ -35,10 +35,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tasks" asp-action="">Tareas</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Queue" asp-action="">Queque Tareas</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TaskLogs" asp-action="">Log de tareas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Notification" asp-action="">Notificaciones</a>
                         </li>
                     </ul>
 
