--- a/taskQueueGrupo3/Views/TaskLogs/Index.cshtml
+++ b/taskQueueGrupo3/Views/TaskLogs/Index.cshtml
@@ -1,47 +1,24 @@
 ﻿@model IEnumerable<taskQueueGrupo3.Models.TaskLog>
 
-@{
-    ViewData["Title"] = "Index";
-}
-
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h2>Log de Tareas</h2>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.LogMessage)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LogDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Task)
-            </th>
-            <th></th>
+            <th>Id</th>
+            <th>TaskId</th>
+            <th>LogMessage</th>
+            <th>LogDate</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.LogMessage)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LogDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Task.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var log in Model)
+        {
+            <tr>
+                <td>@log.Id</td>
+                <td>@log.TaskId</td>
+                <td>@log.LogMessage</td>
+                <td>@log.LogDate</td>
+            </tr>
+        }
     </tbody>
 </table>
